--- a/src/CSimple/App.xaml
+++ b/src/CSimple/App.xaml
@@ -114,6 +114,7 @@
             <x:Double x:Key="PagePadding">15</x:Double>
             <x:Double x:Key="CardPadding">15</x:Double>
             <x:Double x:Key="CardContentPadding">10</x:Double>
+            <x:Double x:Key="CardMargin">5</x:Double>
             <!-- Corner Radius Values -->
             <x:Double x:Key="CornerRadiusSmall">5</x:Double>
             <x:Double x:Key="CornerRadiusMedium">8</x:Double>
